[project]
name = "autograv"
version = "0.1.1"
description = "Automatic differentiation for numerical relativity using JAX"
readme = "README.md"
authors = [
    { name = "Baalateja Kataru", email = "baalateja.k@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "general-relativity",
    "numerical-relativity", 
    "automatic-differentiation",
    "jax",
    "tensor-calculus",
    "einstein-equations",
    "physics",
    "differential-geometry",
    "curvature",
    "gravity"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26,<2",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/bkataru/autograv"
Repository = "https://github.com/bkataru/autograv"
Documentation = "https://github.com/bkataru/autograv#readme"
Issues = "https://github.com/bkataru/autograv/issues"
Changelog = "https://github.com/bkataru/autograv/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
